# schedule-api

./: .gitignore  DOCUMENTATION.md  README.md
src/: Dockerfile  docker-compose.yml  dump_sch.sql  init.sql  main.py  pyproject.toml  schedule_dumpiks.sql
src/api/: __init__.py  booking.py  schedule.py  user.py
src/core/: consts.py  db_helper.py  settings.py  utils.py
src/core/models/: admin.py  booking.py  comment.py  models.py
src/core/schemas/: admin.py  booking.py  comment.py
src/crud/: admin.py  booking.py
src/telegram-bot/: Dockerfile  main.py  requirements.txt
src/telegram-bot/config/: config.py
src/telegram-bot/handlers/: handlers.py
src/telegram_bot/: Dockerfile  main.py
src/telegram_bot/config/: config.py
src/telegram_bot/handlers/: handlers.py
src/telegram_bot/utils/: utils.py
