[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "asyncpg>=0.30.0",
    "datetime>=5.5",
    "environs>=14.1.1",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "openpyxl>=3.1.5",
    "orjson>=3.10.16",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.3",
    "pydantic-settings>=2.8.1",
    "sqlalchemy>=2.0.40",
    "typing>=3.10.0.0",
    "uvicorn>=0.34.0",
]
